correct comment